[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["Павел <sotnikov.pavel.91@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
welcome = "cli:welcome"